# yanki-mvp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.claude/: settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_analyses_ip_hash.py  0003_checker_fields.py  0004_waitlist_signups.py
backend/app/: config.py  net_guard.py  worker.py
backend/app/api/: main.py  routes.py  schemas.py
backend/app/db/: models.py  session.py
backend/app/jobs/: queue.py
backend/app/pipeline/: __init__.py  checker_prompts.py  discovery.py  errors.py  execute.py  footprint.py  kyc.py  prompts.py  runner.py  scoring.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock.py  openai_provider.py  perplexity_provider.py  registry.py
backend/app/services/: analyses.py  checker.py  checker_summary.py  emailer.py  rate_limit.py  waitlist.py
backend/tests/: conftest.py  test_api.py  test_checker_api.py  test_checker_ratelimit.py  test_checker_summary.py  test_emailer.py  test_queue.py  test_queue_postgres.py  test_rate_limit.py  test_waitlist_api.py  test_worker.py  test_worker_alert.py
backend/tests/pipeline/: conftest.py  test_checker_pipeline.py  test_checker_prompts.py  test_discovery.py  test_execute.py  test_execute_race.py  test_footprint.py  test_gemini_provider.py  test_kyc.py  test_mock.py  test_perplexity_provider.py  test_prompts.py  test_registry.py  test_runner.py  test_scoring.py
(+109 files in other folders)
